Resolve dependency conflicts for sqflite which requires SDK version >=2.5.0 <3.0.0
Signed-off-by: Ike Mawira <mawiraike@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
-  sqflite : ^1.2.0
-  path : ^1.6.2
-  password : ^1.0.0
+  sqflite : any
+  path : any
+  password : any
 
 dev_dependencies:
   flutter_test:
