--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   path : any
   password : any
 
+  firebase_core: ^0.4.4+3
+  firebase_analytics: ^5.0.11
+  firebase_auth: ^0.15.5+3
+  cloud_firestore: ^0.13.4+2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
