--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_analytics: ^5.0.11
   firebase_auth: ^0.15.5+3
   cloud_firestore: ^0.13.4+2
+  firebase_database: ^3.1.3
 
 dev_dependencies:
   flutter_test:
