account page, home page modified, added a loader

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   cloud_firestore: ^0.13.4+2
   firebase_database: ^3.1.3
 
+  #flutter loader
+  flutter_spinkit: "^4.1.2"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
